tsa-final-code-8

--- a/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
+++ b/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
@@ -1036,6 +1036,338 @@
     "stid_model = SpatialTemporalIdentity(num_series=num_series)\n",
     "print(f\"STID Model initialized with {sum(p.numel() for p in stid_model.parameters())} parameters.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c448046c",
+   "metadata": {},
+   "source": [
+    "Training Function and Unified Training Process (Adapting training to include curriculum learning, gradient clipping, etc.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28127981",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelTrainer:\n",
+    "    \"\"\"\n",
+    "    Unified Training Process for Multivariate Time Series Models.\n",
+    "\n",
+    "    Includes:\n",
+    "    - Curriculum Learning (Optional)\n",
+    "    - Gradient Clipping\n",
+    "    - Adaptive Learning Rate Scheduling\n",
+    "    - Model Saving and Logging\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, model, train_dataloader, val_dataloader, criterion, optimizer, scheduler=None, \n",
+    "                 clip_grad=1.0, use_curriculum=False, device=\"cuda\" if torch.cuda.is_available() else \"cpu\"):\n",
+    "        \"\"\"\n",
+    "        Initializes the trainer.\n",
+    "\n",
+    "        Args:\n",
+    "            model (torch.nn.Module): Forecasting model.\n",
+    "            train_dataloader (DataLoader): Training dataset loader.\n",
+    "            val_dataloader (DataLoader): Validation dataset loader.\n",
+    "            criterion (torch.nn.Module): Loss function.\n",
+    "            optimizer (torch.optim.Optimizer): Optimizer for training.\n",
+    "            scheduler (torch.optim.lr_scheduler, optional): Learning rate scheduler. Defaults to None.\n",
+    "            clip_grad (float): Gradient clipping value. Defaults to 1.0.\n",
+    "            use_curriculum (bool): Whether to apply curriculum learning. Defaults to False.\n",
+    "            device (str): Compute device (CPU/GPU). Defaults to \"cuda\" if available.\n",
+    "        \"\"\"\n",
+    "        self.model = model.to(device)\n",
+    "        self.train_dataloader = train_dataloader\n",
+    "        self.val_dataloader = val_dataloader\n",
+    "        self.criterion = criterion\n",
+    "        self.optimizer = optimizer\n",
+    "        self.scheduler = scheduler\n",
+    "        self.clip_grad = clip_grad\n",
+    "        self.use_curriculum = use_curriculum\n",
+    "        self.device = device\n",
+    "\n",
+    "    def train_epoch(self):\n",
+    "        \"\"\"\n",
+    "        Performs one training epoch with curriculum learning and gradient clipping.\n",
+    "\n",
+    "        Returns:\n",
+    "            float: Average training loss.\n",
+    "        \"\"\"\n",
+    "        self.model.train()\n",
+    "        total_loss = 0.0\n",
+    "\n",
+    "        for batch_idx, (x, y) in enumerate(self.train_dataloader):\n",
+    "            x, y = x.to(self.device), y.to(self.device)\n",
+    "\n",
+    "            if self.use_curriculum:\n",
+    "                x = self.apply_curriculum_learning(x, batch_idx)\n",
+    "\n",
+    "            self.optimizer.zero_grad()\n",
+    "            output = self.model(x)\n",
+    "            loss = self.criterion(output, y)\n",
+    "            loss.backward()\n",
+    "\n",
+    "            # Gradient Clipping\n",
+    "            if self.clip_grad:\n",
+    "                torch.nn.utils.clip_grad_norm_(self.model.parameters(), self.clip_grad)\n",
+    "\n",
+    "            self.optimizer.step()\n",
+    "            total_loss += loss.item()\n",
+    "\n",
+    "        avg_loss = total_loss / len(self.train_dataloader)\n",
+    "        return avg_loss\n",
+    "\n",
+    "    def validate_epoch(self):\n",
+    "        \"\"\"\n",
+    "        Evaluate model performance on the validation dataset.\n",
+    "\n",
+    "        Returns:\n",
+    "            float: Average validation loss.\n",
+    "        \"\"\"\n",
+    "        self.model.eval()\n",
+    "        total_loss = 0.0\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            for x, y in self.val_dataloader:\n",
+    "                x, y = x.to(self.device), y.to(self.device)\n",
+    "                output = self.model(x)\n",
+    "                loss = self.criterion(output, y)\n",
+    "                total_loss += loss.item()\n",
+    "\n",
+    "        avg_loss = total_loss / len(self.val_dataloader)\n",
+    "        return avg_loss\n",
+    "\n",
+    "    def apply_curriculum_learning(self, x, batch_idx):\n",
+    "        \"\"\"\n",
+    "        Modify the training input dynamically based on epoch progress.\n",
+    "\n",
+    "        Args:\n",
+    "            x (torch.Tensor): Input sequence.\n",
+    "            batch_idx (int): Current batch index.\n",
+    "\n",
+    "        Returns:\n",
+    "            torch.Tensor: Modified input sequence.\n",
+    "        \"\"\"\n",
+    "        difficulty_factor = min(1.0, batch_idx / len(self.train_dataloader))\n",
+    "        return x * difficulty_factor  # Scale input difficulty progressively\n",
+    "\n",
+    "    def train(self, epochs=50):\n",
+    "        \"\"\"\n",
+    "        Runs the full training process over multiple epochs.\n",
+    "\n",
+    "        Args:\n",
+    "            epochs (int): Number of epochs.\n",
+    "        \"\"\"\n",
+    "        for epoch in range(1, epochs + 1):\n",
+    "            train_loss = self.train_epoch()\n",
+    "            val_loss = self.validate_epoch()\n",
+    "\n",
+    "            if self.scheduler:\n",
+    "                self.scheduler.step()\n",
+    "\n",
+    "            print(f\"Epoch {epoch}/{epochs} | Train Loss: {train_loss:.4f} | Val Loss: {val_loss:.4f}\")\n",
+    "\n",
+    "    def save_model(self, save_path=\"trained_model.pth\"):\n",
+    "        \"\"\"\n",
+    "        Saves the trained model state dictionary.\n",
+    "\n",
+    "        Args:\n",
+    "            save_path (str): File path to save the model.\n",
+    "        \"\"\"\n",
+    "        torch.save(self.model.state_dict(), save_path)\n",
+    "        print(f\"Model saved to {save_path}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec65f4f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training process initialized successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example Usage:\n",
+    "def initialize_training_process(model, train_data, val_data, lr=0.001):\n",
+    "    \"\"\"\n",
+    "    Initialize Model Training Pipeline.\n",
+    "\n",
+    "    Args:\n",
+    "        model (torch.nn.Module): Time series forecasting model.\n",
+    "        train_data (Dataset): Training dataset.\n",
+    "        val_data (Dataset): Validation dataset.\n",
+    "        lr (float): Learning rate. Defaults to 0.001.\n",
+    "\n",
+    "    Returns:\n",
+    "        ModelTrainer: Initialized trainer instance.\n",
+    "    \"\"\"\n",
+    "    train_dataloader = DataLoader(train_data, batch_size=64, shuffle=True)\n",
+    "    val_dataloader = DataLoader(val_data, batch_size=64, shuffle=False)\n",
+    "    criterion = nn.MSELoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+    "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=10, gamma=0.7)\n",
+    "\n",
+    "    trainer = ModelTrainer(model, train_dataloader, val_dataloader, criterion, optimizer, scheduler)\n",
+    "    return trainer\n",
+    "\n",
+    "print(\"Training process initialized successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "244583a8",
+   "metadata": {},
+   "source": [
+    "Evaluation Settings for Normalized and Re-Normalized Data (Utilizing metrics like MAE, RMSE, MAPE, and WAPE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44235c64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EvaluationMetrics:\n",
+    "    \"\"\"\n",
+    "    Compute key evaluation metrics for MTS forecasting on both normalized and re-normalized datasets.\n",
+    "\n",
+    "    Supports:\n",
+    "    - Mean Absolute Error (MAE)\n",
+    "    - Root Mean Squared Error (RMSE)\n",
+    "    - Mean Absolute Percentage Error (MAPE)\n",
+    "    - Weighted Absolute Percentage Error (WAPE)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def mae(y_true, y_pred):\n",
+    "        \"\"\"\n",
+    "        Compute Mean Absolute Error (MAE).\n",
+    "\n",
+    "        Args:\n",
+    "            y_true (torch.Tensor): Ground truth values.\n",
+    "            y_pred (torch.Tensor): Predicted values.\n",
+    "\n",
+    "        Returns:\n",
+    "            float: MAE score.\n",
+    "        \"\"\"\n",
+    "        return torch.mean(torch.abs(y_true - y_pred)).item()\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def rmse(y_true, y_pred):\n",
+    "        \"\"\"\n",
+    "        Compute Root Mean Squared Error (RMSE).\n",
+    "\n",
+    "        Args:\n",
+    "            y_true (torch.Tensor): Ground truth values.\n",
+    "            y_pred (torch.Tensor): Predicted values.\n",
+    "\n",
+    "        Returns:\n",
+    "            float: RMSE score.\n",
+    "        \"\"\"\n",
+    "        return torch.sqrt(torch.mean((y_true - y_pred) ** 2)).item()\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def mape(y_true, y_pred):\n",
+    "        \"\"\"\n",
+    "        Compute Mean Absolute Percentage Error (MAPE).\n",
+    "\n",
+    "        Args:\n",
+    "            y_true (torch.Tensor): Ground truth values.\n",
+    "            y_pred (torch.Tensor): Predicted values.\n",
+    "\n",
+    "        Returns:\n",
+    "            float: MAPE score.\n",
+    "        \"\"\"\n",
+    "        mask = y_true != 0  # Avoid division by zero\n",
+    "        return torch.mean(torch.abs((y_true[mask] - y_pred[mask]) / y_true[mask])).item() * 100\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def wape(y_true, y_pred):\n",
+    "        \"\"\"\n",
+    "        Compute Weighted Absolute Percentage Error (WAPE).\n",
+    "\n",
+    "        Args:\n",
+    "            y_true (torch.Tensor): Ground truth values.\n",
+    "            y_pred (torch.Tensor): Predicted values.\n",
+    "\n",
+    "        Returns:\n",
+    "            float: WAPE score.\n",
+    "        \"\"\"\n",
+    "        return torch.sum(torch.abs(y_true - y_pred)).item() / torch.sum(torch.abs(y_true)).item() * 100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fad85693",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to Evaluate Model Predictions\n",
+    "def evaluate_model(y_true, y_pred, dataset_type=\"normalized\"):\n",
+    "    \"\"\"\n",
+    "    Evaluate model performance using key metrics on normalized or re-normalized data.\n",
+    "\n",
+    "    Args:\n",
+    "        y_true (torch.Tensor): Ground truth values.\n",
+    "        y_pred (torch.Tensor): Model predictions.\n",
+    "        dataset_type (str): Dataset type (\"normalized\" or \"re-normalized\").\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Dictionary containing metric scores.\n",
+    "    \"\"\"\n",
+    "    assert dataset_type in [\"normalized\", \"re-normalized\"], \"Invalid dataset type specified.\"\n",
+    "\n",
+    "    metrics = {\n",
+    "        \"MAE\": EvaluationMetrics.mae(y_true, y_pred),\n",
+    "        \"RMSE\": EvaluationMetrics.rmse(y_true, y_pred),\n",
+    "        \"MAPE\": EvaluationMetrics.mape(y_true, y_pred) if dataset_type == \"re-normalized\" else None,\n",
+    "        \"WAPE\": EvaluationMetrics.wape(y_true, y_pred),\n",
+    "    }\n",
+    "\n",
+    "    return {k: v for k, v in metrics.items() if v is not None}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc4f1ec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Metrics:\n",
+      "MAE: 0.3436\n",
+      "RMSE: 0.4266\n",
+      "MAPE: 236.6825\n",
+      "WAPE: 73.3246\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example Usage:\n",
+    "y_true_sample = torch.tensor(np.random.rand(100), dtype=torch.float32)\n",
+    "y_pred_sample = torch.tensor(np.random.rand(100), dtype=torch.float32)\n",
+    "\n",
+    "results = evaluate_model(y_true_sample, y_pred_sample, dataset_type=\"re-normalized\")\n",
+    "\n",
+    "print(\"Evaluation Metrics:\")\n",
+    "for metric, value in results.items():\n",
+    "    print(f\"{metric}: {value:.4f}\")\n"
+   ]
   }
  ],
  "metadata": {
