tsa-final-code-9

--- a/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
+++ b/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
@@ -1368,6 +1368,139 @@
     "for metric, value in results.items():\n",
     "    print(f\"{metric}: {value:.4f}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c76d6d8a",
+   "metadata": {},
+   "source": [
+    "Advanced Neural Networks vs. Basic Neural Networks (Hypotheses and experiment setup for performance comparison based on temporal patterns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b3bd5dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelComparisonEvaluator:\n",
+    "    \"\"\"\n",
+    "    Compare Advanced Neural Networks (e.g., Transformers) vs. Basic Neural Networks (e.g., Linear Models)\n",
+    "    based on dataset heterogeneity.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, models, datasets, batch_size=64, device=\"cuda\" if torch.cuda.is_available() else \"cpu\"):\n",
+    "        \"\"\"\n",
+    "        Initialize evaluator with models and datasets.\n",
+    "\n",
+    "        Args:\n",
+    "            models (dict): Dictionary of models (keys as names, values as PyTorch models).\n",
+    "            datasets (dict): Dictionary of datasets (keys as names, values as PyTorch datasets).\n",
+    "            batch_size (int): Batch size for evaluation.\n",
+    "            device (str): Compute device (CPU/GPU). Defaults to \"cuda\" if available.\n",
+    "        \"\"\"\n",
+    "        self.models = {name: model.to(device) for name, model in models.items()}\n",
+    "        self.datasets = datasets\n",
+    "        self.batch_size = batch_size\n",
+    "        self.device = device\n",
+    "\n",
+    "    def evaluate_model(self, model, dataloader):\n",
+    "        \"\"\"\n",
+    "        Evaluate a single model on a dataset using MAE.\n",
+    "\n",
+    "        Args:\n",
+    "            model (torch.nn.Module): The model to evaluate.\n",
+    "            dataloader (DataLoader): Dataloader for the dataset.\n",
+    "\n",
+    "        Returns:\n",
+    "            float: Average MAE.\n",
+    "        \"\"\"\n",
+    "        model.eval()\n",
+    "        total_mae = 0.0\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            for x, y in dataloader:\n",
+    "                x, y = x.to(self.device), y.to(self.device)\n",
+    "                output = model(x)\n",
+    "                mae_score = torch.mean(torch.abs(y - output)).item()\n",
+    "                total_mae += mae_score\n",
+    "\n",
+    "        return total_mae / len(dataloader)\n",
+    "\n",
+    "    def compare_models(self):\n",
+    "        \"\"\"\n",
+    "        Compare performance of advanced vs. basic neural networks across datasets.\n",
+    "\n",
+    "        Returns:\n",
+    "            dict: Comparison results.\n",
+    "        \"\"\"\n",
+    "        results = {}\n",
+    "\n",
+    "        for dataset_name, dataset in self.datasets.items():\n",
+    "            dataloader = DataLoader(dataset, batch_size=self.batch_size, shuffle=False)\n",
+    "\n",
+    "            results[dataset_name] = {}\n",
+    "            for model_name, model in self.models.items():\n",
+    "                mae_score = self.evaluate_model(model, dataloader)\n",
+    "                results[dataset_name][model_name] = mae_score\n",
+    "\n",
+    "        return results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f8e4f66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example Usage\n",
+    "datasets = {\n",
+    "    \"PEMS08\": MTSDataset(np.random.rand(500, 10), seq_length=12, forecast_length=12),\n",
+    "    \"ETTh2\": MTSDataset(np.random.rand(500, 10), seq_length=12, forecast_length=12)\n",
+    "}\n",
+    "\n",
+    "models = {\n",
+    "    \"Transformer\": TimeSeriesTransformer(input_dim=10),\n",
+    "    \"Linear\": nn.Linear(10, 10)\n",
+    "}\n",
+    "\n",
+    "evaluator = ModelComparisonEvaluator(models, datasets)\n",
+    "comparison_results = evaluator.compare_models()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f8e0322",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Performance Comparison (MAE Scores):\n",
+      "\n",
+      "Dataset: PEMS08\n",
+      "  Transformer: MAE = 0.9855\n",
+      "  Linear: MAE = 0.9713\n",
+      "\n",
+      "Dataset: ETTh2\n",
+      "  Transformer: MAE = 0.9861\n",
+      "  Linear: MAE = 0.9627\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display Results\n",
+    "print(\"\\nPerformance Comparison (MAE Scores):\")\n",
+    "for dataset, results in comparison_results.items():\n",
+    "    print(f\"\\nDataset: {dataset}\")\n",
+    "    for model, score in results.items():\n",
+    "        print(f\"  {model}: MAE = {score:.4f}\")\n"
+   ]
   }
  ],
  "metadata": {
