--- a/deep learning/hw05/chapter11_part01_introduction.ipynb
+++ b/deep learning/hw05/chapter11_part01_introduction.ipynb
@@ -139,6 +139,49 @@
     "]\n",
     "text_vectorization.adapt(dataset)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe5d4ee6",
+   "metadata": {},
+   "source": [
+    "**Displaying the vocabulary**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db5232b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_vectorization.get_vocabulary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eceb1c9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocabulary = text_vectorization.get_vocabulary()\n",
+    "test_sentence = \"I write, rewrite, and still rewrite again\"\n",
+    "encoded_sentence = text_vectorization(test_sentence)\n",
+    "print(encoded_sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f91ea20e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inverse_vocab = dict(enumerate(vocabulary))\n",
+    "decoded_sentence = \" \".join(inverse_vocab[int(i)] for i in encoded_sentence)\n",
+    "print(decoded_sentence)"
+   ]
   }
  ],
  "metadata": {
