--- a/deep learning/hw05/chapter11_part01_introduction.ipynb
+++ b/deep learning/hw05/chapter11_part01_introduction.ipynb
@@ -182,6 +182,97 @@
     "decoded_sentence = \" \".join(inverse_vocab[int(i)] for i in encoded_sentence)\n",
     "print(decoded_sentence)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59af4a25",
+   "metadata": {},
+   "source": [
+    "## Two approaches for representing groups of words: Sets and sequences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a9b8c54",
+   "metadata": {},
+   "source": [
+    "### Preparing the IMDB movie reviews data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d439ce0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl -O https://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+    "!tar -xf aclImdb_v1.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b9db113",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -r aclImdb/train/unsup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "990035d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat aclImdb/train/pos/4077_10.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba687796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, pathlib, shutil, random\n",
+    "\n",
+    "base_dir = pathlib.Path(\"aclImdb\")\n",
+    "val_dir = base_dir / \"val\"\n",
+    "train_dir = base_dir / \"train\"\n",
+    "for category in (\"neg\", \"pos\"):\n",
+    "    os.makedirs(val_dir / category)\n",
+    "    files = os.listdir(train_dir / category)\n",
+    "    random.Random(1337).shuffle(files)\n",
+    "    num_val_samples = int(0.2 * len(files))\n",
+    "    val_files = files[-num_val_samples:]\n",
+    "    for fname in val_files:\n",
+    "        shutil.move(train_dir / category / fname,\n",
+    "                    val_dir / category / fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05307775",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras\n",
+    "batch_size = 32\n",
+    "\n",
+    "train_ds = keras.utils.text_dataset_from_directory(\n",
+    "    \"aclImdb/train\", batch_size=batch_size\n",
+    ")\n",
+    "val_ds = keras.utils.text_dataset_from_directory(\n",
+    "    \"aclImdb/val\", batch_size=batch_size\n",
+    ")\n",
+    "test_ds = keras.utils.text_dataset_from_directory(\n",
+    "    \"aclImdb/test\", batch_size=batch_size\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
