--- a/deep learning/hw05/chapter11_part01_introduction.ipynb
+++ b/deep learning/hw05/chapter11_part01_introduction.ipynb
@@ -273,6 +273,164 @@
     "    \"aclImdb/test\", batch_size=batch_size\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ac434a6",
+   "metadata": {},
+   "source": [
+    "**Displaying the shapes and dtypes of the first batch**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37ca9604",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for inputs, targets in train_ds:\n",
+    "    print(\"inputs.shape:\", inputs.shape)\n",
+    "    print(\"inputs.dtype:\", inputs.dtype)\n",
+    "    print(\"targets.shape:\", targets.shape)\n",
+    "    print(\"targets.dtype:\", targets.dtype)\n",
+    "    print(\"inputs[0]:\", inputs[0])\n",
+    "    print(\"targets[0]:\", targets[0])\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac72124b",
+   "metadata": {},
+   "source": [
+    "### Processing words as a set: The bag-of-words approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0cfb68a",
+   "metadata": {},
+   "source": [
+    "#### Single words (unigrams) with binary encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fd01cae",
+   "metadata": {},
+   "source": [
+    "**Preprocessing our datasets with a `TextVectorization` layer**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45bbff75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_vectorization = TextVectorization(\n",
+    "    max_tokens=20000,\n",
+    "    output_mode=\"multi_hot\",\n",
+    ")\n",
+    "text_only_train_ds = train_ds.map(lambda x, y: x)\n",
+    "text_vectorization.adapt(text_only_train_ds)\n",
+    "\n",
+    "binary_1gram_train_ds = train_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "binary_1gram_val_ds = val_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "binary_1gram_test_ds = test_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca03cb86",
+   "metadata": {},
+   "source": [
+    "**Inspecting the output of our binary unigram dataset**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67163b05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for inputs, targets in binary_1gram_train_ds:\n",
+    "    print(\"inputs.shape:\", inputs.shape)\n",
+    "    print(\"inputs.dtype:\", inputs.dtype)\n",
+    "    print(\"targets.shape:\", targets.shape)\n",
+    "    print(\"targets.dtype:\", targets.dtype)\n",
+    "    print(\"inputs[0]:\", inputs[0])\n",
+    "    print(\"targets[0]:\", targets[0])\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ec5b92",
+   "metadata": {},
+   "source": [
+    "**Our model-building utility**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7153a44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "\n",
+    "def get_model(max_tokens=20000, hidden_dim=16):\n",
+    "    inputs = keras.Input(shape=(max_tokens,))\n",
+    "    x = layers.Dense(hidden_dim, activation=\"relu\")(inputs)\n",
+    "    x = layers.Dropout(0.5)(x)\n",
+    "    outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+    "    model = keras.Model(inputs, outputs)\n",
+    "    model.compile(optimizer=\"rmsprop\",\n",
+    "                  loss=\"binary_crossentropy\",\n",
+    "                  metrics=[\"accuracy\"])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7088293",
+   "metadata": {},
+   "source": [
+    "**Training and testing the binary unigram model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35c9aa14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = get_model()\n",
+    "model.summary()\n",
+    "callbacks = [\n",
+    "    keras.callbacks.ModelCheckpoint(\"binary_1gram.keras\",\n",
+    "                                    save_best_only=True)\n",
+    "]\n",
+    "model.fit(binary_1gram_train_ds.cache(),\n",
+    "          validation_data=binary_1gram_val_ds.cache(),\n",
+    "          epochs=10,\n",
+    "          callbacks=callbacks)\n",
+    "model = keras.models.load_model(\"binary_1gram.keras\")\n",
+    "print(f\"Test acc: {model.evaluate(binary_1gram_test_ds)[1]:.3f}\")"
+   ]
   }
  ],
  "metadata": {
