--- a/deep learning/hw05/chapter11_part01_introduction.ipynb
+++ b/deep learning/hw05/chapter11_part01_introduction.ipynb
@@ -431,6 +431,76 @@
     "model = keras.models.load_model(\"binary_1gram.keras\")\n",
     "print(f\"Test acc: {model.evaluate(binary_1gram_test_ds)[1]:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fcd8b19",
+   "metadata": {},
+   "source": [
+    "#### Bigrams with binary encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41117c60",
+   "metadata": {},
+   "source": [
+    "**Configuring the `TextVectorization` layer to return bigrams**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce9e7f70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_vectorization = TextVectorization(\n",
+    "    ngrams=2,\n",
+    "    max_tokens=20000,\n",
+    "    output_mode=\"multi_hot\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7b1a16d",
+   "metadata": {},
+   "source": [
+    "**Training and testing the binary bigram model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "634cd99c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_vectorization.adapt(text_only_train_ds)\n",
+    "binary_2gram_train_ds = train_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "binary_2gram_val_ds = val_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "binary_2gram_test_ds = test_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "\n",
+    "model = get_model()\n",
+    "model.summary()\n",
+    "callbacks = [\n",
+    "    keras.callbacks.ModelCheckpoint(\"binary_2gram.keras\",\n",
+    "                                    save_best_only=True)\n",
+    "]\n",
+    "model.fit(binary_2gram_train_ds.cache(),\n",
+    "          validation_data=binary_2gram_val_ds.cache(),\n",
+    "          epochs=10,\n",
+    "          callbacks=callbacks)\n",
+    "model = keras.models.load_model(\"binary_2gram.keras\")\n",
+    "print(f\"Test acc: {model.evaluate(binary_2gram_test_ds)[1]:.3f}\")"
+   ]
   }
  ],
  "metadata": {
