--- a/deep learning/hw05/chapter11_part01_introduction.ipynb
+++ b/deep learning/hw05/chapter11_part01_introduction.ipynb
@@ -501,6 +501,127 @@
     "model = keras.models.load_model(\"binary_2gram.keras\")\n",
     "print(f\"Test acc: {model.evaluate(binary_2gram_test_ds)[1]:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c163606d",
+   "metadata": {},
+   "source": [
+    "#### Bigrams with TF-IDF encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "def1198e",
+   "metadata": {},
+   "source": [
+    "**Configuring the `TextVectorization` layer to return token counts**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f21f6b67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_vectorization = TextVectorization(\n",
+    "    ngrams=2,\n",
+    "    max_tokens=20000,\n",
+    "    output_mode=\"count\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd20e356",
+   "metadata": {},
+   "source": [
+    "**Configuring `TextVectorization` to return TF-IDF-weighted outputs**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0fb706d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_vectorization = TextVectorization(\n",
+    "    ngrams=2,\n",
+    "    max_tokens=20000,\n",
+    "    output_mode=\"tf_idf\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91c2e8cf",
+   "metadata": {},
+   "source": [
+    "**Training and testing the TF-IDF bigram model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc5f1d68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_vectorization.adapt(text_only_train_ds)\n",
+    "\n",
+    "tfidf_2gram_train_ds = train_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "tfidf_2gram_val_ds = val_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "tfidf_2gram_test_ds = test_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "\n",
+    "model = get_model()\n",
+    "model.summary()\n",
+    "callbacks = [\n",
+    "    keras.callbacks.ModelCheckpoint(\"tfidf_2gram.keras\",\n",
+    "                                    save_best_only=True)\n",
+    "]\n",
+    "model.fit(tfidf_2gram_train_ds.cache(),\n",
+    "          validation_data=tfidf_2gram_val_ds.cache(),\n",
+    "          epochs=10,\n",
+    "          callbacks=callbacks)\n",
+    "model = keras.models.load_model(\"tfidf_2gram.keras\")\n",
+    "print(f\"Test acc: {model.evaluate(tfidf_2gram_test_ds)[1]:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "951436b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = keras.Input(shape=(1,), dtype=\"string\")\n",
+    "processed_inputs = text_vectorization(inputs)\n",
+    "outputs = model(processed_inputs)\n",
+    "inference_model = keras.Model(inputs, outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf3d746d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "raw_text_data = tf.convert_to_tensor([\n",
+    "    [\"That was an excellent movie, I loved it.\"],\n",
+    "])\n",
+    "predictions = inference_model(raw_text_data)\n",
+    "print(f\"{float(predictions[0] * 100):.2f} percent positive\")"
+   ]
   }
  ],
  "metadata": {
