--- a/deep learning/hw05/chapter11_part03_transformer.ipynb
+++ b/deep learning/hw05/chapter11_part03_transformer.ipynb
@@ -66,6 +66,87 @@
     "!tar -xf aclImdb_v1.tar.gz\n",
     "!rm -r aclImdb/train/unsup"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae99b194",
+   "metadata": {},
+   "source": [
+    "**Preparing the data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2c020d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, pathlib, shutil, random\n",
+    "from tensorflow import keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69b3eb67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "base_dir = pathlib.Path(\"aclImdb\")\n",
+    "val_dir = base_dir / \"val\"\n",
+    "train_dir = base_dir / \"train\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "259aaa38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for category in (\"neg\", \"pos\"):\n",
+    "    os.makedirs(val_dir / category)\n",
+    "\n",
+    "    files = os.listdir(train_dir / category)\n",
+    "    random.Random(1337).shuffle(files)\n",
+    "    num_val_samples = int(0.2 * len(files))\n",
+    "    val_files = files[-num_val_samples:]\n",
+    "    \n",
+    "    for fname in val_files:\n",
+    "        shutil.move(train_dir / category / fname,\n",
+    "                    val_dir / category / fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2037cf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 61520 files belonging to 3 classes.\n",
+      "Found 2880 files belonging to 2 classes.\n",
+      "Found 25000 files belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_ds = keras.utils.text_dataset_from_directory(\n",
+    "    \"aclImdb/train\", batch_size=batch_size\n",
+    ")\n",
+    "val_ds = keras.utils.text_dataset_from_directory(\n",
+    "    \"aclImdb/val\", batch_size=batch_size\n",
+    ")\n",
+    "test_ds = keras.utils.text_dataset_from_directory(\n",
+    "    \"aclImdb/test\", batch_size=batch_size\n",
+    ")\n",
+    "text_only_train_ds = train_ds.map(lambda x, y: x)"
+   ]
   }
  ],
  "metadata": {
